# comicarr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  METRICS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
backend/: alembic.ini
backend/comicarr/: __init__.py  app.py
backend/comicarr/core/: auth.py  bootstrap.py  config.py  database.py  dependencies.py  import_process.py  import_processing_job_processor.py  import_scan.py  import_scanning_job_processor.py  logging.py  metrics.py  middleware.py  models.py  routes.py  security.py  settings_persistence.py  tracing.py  utils.py
backend/comicarr/db/: __init__.py  models.py
backend/comicarr/routes/: auth.py  comicvine.py  general.py  imports.py  include_paths.py  indexers.py  libraries.py  queue.py  reading.py  releases.py  settings.py  volumes.py
backend/data/config/: security.json
backend/tests/: README.md  __init__.py
backend/tests/e2e/: README.md  __init__.py  conftest.py
backend/tests/integration/: README.md  __init__.py  test_auth_routes.py  test_import_routes.py  test_weekly_releases_routes.py
backend/tests/unit/: README.md  __init__.py  test_auth.py  test_auth_metrics.py  test_bootstrap.py  test_config.py  test_database_metrics.py  test_general.py  test_hello.py  test_import_job_processors.py  test_import_process.py  test_import_scan.py  test_indexers_routes.py  test_logging.py  test_metrics.py  test_middleware.py  test_security.py  test_settings_routes.py  test_tracing.py  test_utils_normalization.py  test_weekly_releases_job_processor.py  test_weekly_releases_matching.py  test_weekly_releases_matching_job_processor.py  test_weekly_releases_processing.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  hello.test.ts  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: BulkActionsBar.css  BulkActionsBar.tsx  Card.css  FilterBar.css  FilterBar.tsx  IndexerCard.css  IndexerCard.tsx  IndexerModal.css  IndexerModal.tsx  Layout.css  Layout.tsx  MultiSelectFilter.css  MultiSelectFilter.tsx  PlaceholderPickerModal.css  PlaceholderPickerModal.tsx  ProgressIndicator.css  ProgressIndicator.tsx  RadioGroup.css  RadioGroup.tsx  RequireAuth.tsx  SelectionControls.css  SelectionControls.tsx  ThemeToggle.css  ThemeToggle.tsx  Toggle.css  Toggle.tsx  VolumeFilters.css  VolumeFilters.tsx  VolumePickerModal.css  VolumePickerModal.tsx
frontend/src/contexts/: AuthContext.tsx  PageActionsContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useSettingsChangeDetection.ts
frontend/src/pages/: AddLibraryPage.css  AddLibraryPage.tsx  AddVolumePage.css  AddVolumePage.tsx  AdvancedSettingsPage.tsx  EditLibraryPage.css  EditLibraryPage.tsx  HistoryPage.css  HistoryPage.tsx  HomePage.css  HomePage.tsx  ImportPage.css  ImportPage.tsx  IndexersPage.css  IndexersPage.tsx  LibrariesPage.css  LibrariesPage.tsx  LoginPage.css  LoginPage.tsx  MediaManagementSettingsPage.css  MediaManagementSettingsPage.tsx  ReadingPage.css  ReadingPage.tsx  ReadingSettingsPage.css  ReadingSettingsPage.tsx  SettingsIndexPage.css  (+14 more)
(+44 files in other folders)
