[project]
name = "comicarr"
version = "0.1.0"
description = "Comicarr - Comic book library management system"
authors = [
    { name = "ComicarrDev", email = "ComicarrDev@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "sqlmodel>=0.0.22",
    "greenlet>=3.1.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "bcrypt>=4.2.0",
    "rarfile>=4.1",
    "beautifulsoup4>=4.12.0",
    "cloudscraper>=1.2.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.9",
    "pyrefly>=0.43.0",
]

[project.scripts]
comicarr = "comicarr.app:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests/unit", "backend/tests/integration", "backend/tests/e2e"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["backend/comicarr"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["comicarr"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are often intentional
"*/migrations/*" = ["E501", "F401"]  # migrations can have long lines and unused imports

[tool.ruff.lint.isort]
known-first-party = ["comicarr"]

